Add ingredient list

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -13,5 +13,14 @@
 <p><strong><em>Wondrously Fluffy Vegan Pancakes, incredibly easy to make with a handful of pantry staples! Made in 1 bowl.</em></strong></p>
 <p>I love having a few staple recipes for when I'm craving baked sweet goods. If you have some basic baking ingredients around the house, make some pancakes! I don’t know about you, but I love <em>veganizing</em> classic recipes. So I tend to try this with all the food I love! But no matter what, I always make sure it is tasty.</p>
 <h3>Ingredients</h3>
+<ul>
+    <li>75 g buckwheat flour</li>
+    <li>125 ml rice drink</li>
+    <li>1 tbsp sugar</li>
+    <li>1 tbsp vegetable oil</li>
+    <li>0,5 tbsp baking powder</li>
+    <li>0,5 lime, juiced</li>
+    <li>0,25 tsp salt</li>
+</ul>
 </body>
 </html>
