Add heading and list of steps

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -18,9 +18,16 @@
     <li>125 ml rice drink</li>
     <li>1 tbsp sugar</li>
     <li>1 tbsp vegetable oil</li>
-    <li>0,5 tbsp baking powder</li>
-    <li>0,5 lime, juiced</li>
-    <li>0,25 tsp salt</li>
+    <li>1/2 tbsp baking powder</li>
+    <li>1/2 lime, juiced</li>
+    <li>1/4 tsp salt</li>
 </ul>
+<h3>Steps</h3>
+<ol>
+    <li>In a medium bowl, add the rice drink, sugar, oil and lime juice. Whisk until well combined.</li>
+    <li>Add the flour to the wet ingredients, then sprinkle the baking powder and salt on top of the flour. Mix until just combined with a wooden spoon.</li>
+    <li>Heat a large griddle or pan over medium-high heat. Drop about 1/3 cup of the batter onto the griddle. Cook until bubbles form, then flip and cook until golden brown until the other side, about 1-2 minutes. Repeat with all the remaining batter.</li>
+    <li>Serve with vegan butter, powdered sugar and/or maple syrup. The recipe can be easily doubled, tripled or quadrupled.</li>
+</ol>
 </body>
 </html>
