--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -29,5 +29,6 @@
     <li>Heat a large griddle or pan over medium-high heat. Drop about 1/3 cup of the batter onto the griddle. Cook until bubbles form, then flip and cook until golden brown until the other side, about 1-2 minutes. Repeat with all the remaining batter.</li>
     <li>Serve with vegan butter, powdered sugar and/or maple syrup. The recipe can be easily doubled, tripled or quadrupled.</li>
 </ol>
+<a href="../index.html">Return to Homepage</a>
 </body>
 </html>
