--- a/recipes/homemade-fries.html
+++ b/recipes/homemade-fries.html
@@ -19,6 +19,15 @@
     <li>Salt and pepper to taste</li>
     <li>1/4 tbsp Parsley <em>optional</em></li>
     </ul>
-
+    <h3>Steps</h3>
+    <ol>
+        <li>Cut the potatoes into matchsticks, either with a knife or with a french fry cutter. The potato pieces should all be similar in size.</li>
+        <li>Place the potatoes in a bowl of cold water. Soak the potatoes for at least 30 minutes.</li>
+        <li>Drain the water from the potatoes. Place the potatoes on a layer of paper towels and pat thoroughly with additional towels until dry.</li>
+        <li>Pour 3 inches of oil into a large, deep pot. Heat the oil to 300 degrees F.</li>
+        <li>Place about 1/3 of the potatoes in the pot, and cook until tender. This takes about 4-5 minutes. Repeat the process with the remaining potatoes.</li>
+        <li>Increase the heat of the oil to 400 degrees F. Place 1/3 of the potatoes back in the pot and cook for an additional 1-3 minutes or until golden brown. Repeat the process with the remaining potatoes. Place the cooked potatoes on a sheet pan lined with paper towels.</li>
+    </ol>
+        <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
