Add second recipe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pancakes.html">Vegan pancakes</a>
+<ul>
+    <li><a href="./recipes/pancakes.html">Vegan pancakes</a></li>
+    <li><a href="./recipes/homemade-fries.html">Homemade fries</a></li>
+</ul>
+    
 </body>
 </html>
