--- a/recipes/homemade-fries.html
+++ b/recipes/homemade-fries.html
@@ -27,7 +27,8 @@
         <li>Pour 3 inches of oil into a large, deep pot. Heat the oil to 300 degrees F.</li>
         <li>Place about 1/3 of the potatoes in the pot, and cook until tender. This takes about 4-5 minutes. Repeat the process with the remaining potatoes.</li>
         <li>Increase the heat of the oil to 400 degrees F. Place 1/3 of the potatoes back in the pot and cook for an additional 1-3 minutes or until golden brown. Repeat the process with the remaining potatoes. Place the cooked potatoes on a sheet pan lined with paper towels.</li>
-    </ol>
+        <li>Sprinkle salt and pepper to taste over the fries. Add parsley if desired, then serve immediately.</li>
+            </ol>
         <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
