--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
 <ul>
-    <li><a href="./recipes/pancakes.html">Vegan pancakes</a></li>
+    <li><a href="./recipes/pancakes.html">Pancakes</a></li>
     <li><a href="./recipes/homemade-fries.html">Homemade fries</a></li>
+    <li><a href="./recipes/banhxeo.html">Banh xeo</a></li>
 </ul>
     
 </body>
