--- a/recipes/homemade-fries.html
+++ b/recipes/homemade-fries.html
@@ -29,6 +29,13 @@
         <li>Increase the heat of the oil to 400 degrees F. Place 1/3 of the potatoes back in the pot and cook for an additional 1-3 minutes or until golden brown. Repeat the process with the remaining potatoes. Place the cooked potatoes on a sheet pan lined with paper towels.</li>
         <li>Sprinkle salt and pepper to taste over the fries. Add parsley if desired, then serve immediately.</li>
             </ol>
+            <a href="./pancakes.html">Go to Pancakes recipe</a>
+<br/>
+<br/>
+<a href="./banhxeo.html">Go to Banh Xeo recipe</a>
+<br/>
+<br/>
+<br/>
         <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
