--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -29,6 +29,13 @@
     <li>Heat a large griddle or pan over medium-high heat. Drop about 1/3 cup of the batter onto the griddle. Cook until bubbles form, then flip and cook until golden brown until the other side, about 1-2 minutes. Repeat with all the remaining batter.</li>
     <li>Serve with vegan butter, powdered sugar and/or maple syrup. The recipe can be easily doubled, tripled or quadrupled.</li>
 </ol>
+<a href="./homemade-fries.html">Go to Homemade Fries recipe</a>
+<br/>
+<br/>
+<a href="./banhxeo.html">Go to Banh Xeo recipe</a>
+<br/>
+<br/>
+<br/>
 <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
