--- a/recipes/banhxeo.html
+++ b/recipes/banhxeo.html
@@ -28,5 +28,15 @@
         <li>1 tbsp gluten-free soy sauce</li>
         <li>200 g bean sprouts</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>In a bowl, whisk rice flour with turmeric, 1/4 tsp salt into the coconut milk. Add 250 ml water and whisk vigorously to obtain a smooth batter. Let rest for 15 to 30 minutes at room temperature.</li>
+        <li>In a small bowl, stir together the juice of 1 lemon, soy sauce, 2 tbsp sugar and 2 to 3 tbsp water. Mince the garlic and add to the sauce. Set aside. For the filling, wash peel and grate the carrot. Cut the spring onion and mushrooms into thin slices. Chop the fresh herbs.</li>
+        <li>Heat a tsp of oil in a no-stick pan and add the mushrooms and spring onions. Add 2 pinches of salt and a pinch of sugar and fry veg for about 2 to 3 minutes on medium-high heat until the mushrooms are just starting to lose their water. Add 1 tbsp soy sauce and stir well for. Transfer mixture to a little bowl.</li>
+        <li>Wipe the pan with a paper towel and reheat 2 tsp of oil on medium-high heat. Add a ladle of dough to the hot pan and swirl the pan immediately so the batter is evenly spread. Add more batter if it wasn't enough to cover the pan. Drizzle more oil around the border of the crepes.</li>
+<li>Sprinkle 1 tbsp carrot, mushroom and bean sprouts on one-half of the crepes and cover the pan with a lid. After a minute lift the lid and carefully check the color of the bottom side of the crepe using a rubber spatula. If the bottom is crispy and golden, it's time to sprinkle some fresh herbs on the filling and to fold the crepe over to enclose.</li>
+<li>Keep the crepes warm in a preheated oven while you repeat the whole process with the remaining ingredients.</li>
+<li>Serve the crepes with the sauce.</li>
+    </ol>
 </body>
 </html>
