--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -33,10 +33,10 @@
 <br/>
 <br/>
 <br/>
-<a href="./homemade-fries.html">Go to Homemade Fries recipe</a>
+<a href="./homemade-fries.html">Eyes on the Fries</a>
 <br/>
 <br/>
-<a href="./banhxeo.html">Go to Banh Xeo recipe</a>
+<a href="./banhxeo.html">Every-Banh-y Xeo, oh!</a>
 <br/>
 <br/>
 <br/>
