Turn recipe links into puns

--- a/recipes/banhxeo.html
+++ b/recipes/banhxeo.html
@@ -42,10 +42,10 @@
     <br/>
     <br/>
     <br/>
-    <a href="./homemade-fries.html">Go to Homemade Fries recipe</a>
+    <a href="./homemade-fries.html">All Fries on me</a>
 <br/>
 <br/>
-<a href="./pancakes.html">Go to Pancakes recipe</a>
+<a href="./pancakes.html">Pancake my day</a>
 <br/>
 <br/>
 <br/>
