--- a/recipes/homemade-fries.html
+++ b/recipes/homemade-fries.html
@@ -33,10 +33,10 @@
     <br/>
     <br/>
     <br/>
-<a href="./pancakes.html">Go to Pancakes recipe</a>
+<a href="./pancakes.html">Pancake my eyes off you</a>
 <br/>
 <br/>
-<a href="./banhxeo.html">Go to Banh Xeo recipe</a>
+<a href="./banhxeo.html">You Banh Xe-O in the morning</a>
 <br/>
 <br/>
 <br/>
