Make food words in recipe links bold

--- a/recipes/banhxeo.html
+++ b/recipes/banhxeo.html
@@ -42,10 +42,10 @@
     <br/>
     <br/>
     <br/>
-    <a href="./homemade-fries.html">All Fries on me</a>
+    <a href="./homemade-fries.html">All <strong>Fries</strong> on me</a>
 <br/>
 <br/>
-<a href="./pancakes.html">Pancake my day</a>
+<a href="./pancakes.html"><strong>Pancake</strong> my day</a>
 <br/>
 <br/>
 <br/>
