--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -33,10 +33,10 @@
 <br/>
 <br/>
 <br/>
-<a href="./homemade-fries.html">Eyes on the Fries</a>
+<a href="./homemade-fries.html">Eyes on the <strong>Fries</strong></a>
 <br/>
 <br/>
-<a href="./banhxeo.html">Every-Banh-y Xeo, oh!</a>
+<a href="./banhxeo.html">Every-<strong>Banh</strong>-y <strong>Xeo</strong>, oh!</a>
 <br/>
 <br/>
 <br/>
