--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="full-body">
     <h1>Odin Recipes</h1>
 <ul>
     <li><a href="./recipes/pancakes.html">Pancakes</a></li>
     <li><a href="./recipes/homemade-fries.html">Homemade fries</a></li>
     <li><a href="./recipes/banhxeo.html">Banh xeo</a></li>
 </ul>
-    
+    </div>
 </body>
 </html>
