Place home-link beneath backgroundcolor

--- a/recipes/banhxeo.html
+++ b/recipes/banhxeo.html
@@ -51,7 +51,8 @@
 <br/>
 <br/>
 <br/>
-<a href="../index.html"><strong>Return to Homepage</strong></a>
 </div>
+<br/>
+<a class="home-link" href="../index.html"><strong>Return to Homepage</strong></a>
 </body>
 </html>
