--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="full-body">
     <h1>Odin Recipes</h1>
-<ul>
-    <li><a href="./recipes/pancakes.html">Pancakes</a></li>
-    <li><a href="./recipes/homemade-fries.html">Homemade fries</a></li>
-    <li><a href="./recipes/banhxeo.html">Banh xeo</a></li>
+<ul class="recipes">
+    <li class="recipe-link"><a href="./recipes/pancakes.html">Pancakes</a></li>
+    <li class="recipe-link"><a href="./recipes/homemade-fries.html">Homemade fries</a></li>
+    <li class="recipe-link"><a href="./recipes/banhxeo.html">Banh xeo</a></li>
 </ul>
+<br/>
     </div>
 </body>
 </html>
