Add class to list

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <div class="full-body">
     <h1>Odin Recipes</h1>
-<ul>
+    <div class="table">
+<ul class="recipes">
     <li class="recipe-link"><a class="link-color" href="./recipes/pancakes.html">Pancakes</a></li>
     <li class="recipe-link"><a class="link-color" href="./recipes/homemade-fries.html">Homemade fries</a></li>
     <li class="recipe-link"><a class="link-color" href="./recipes/banhxeo.html">Banh xeo</a></li>
 </ul>
+</div>
 <br/>
     </div>
 </body>
